--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,6 +9,19 @@ body {
   scroll-behavior: smooth;
   background-color: #1a1919;
   color: #fff;
+  overflow-x: hidden;
+}
+body::-webkit-scrollbar {
+  width: 5px;            
+}
+
+body::-webkit-scrollbar-track {
+  background: #3b3b3b;    
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #fff;    
+  border-radius: 20px;      
 }
 
 code {
