Alterando css de navbar (add margin 20px)

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -70,6 +70,7 @@ nav {
     overflow-x: auto;
     grid-gap: 5px;
     margin-inline: 5px;
+    margin-right: 20px;
     width: auto;
     font-size: 35px;
 }
