--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@ nav {
     height: 50px;
     display: flex;
     justify-content: space-between;
-    background: rgba(255, 255, 255, 0);
+    background: #1e1e1fa2;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
