--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
-  background: rgb(9,9,9);
-  background: linear-gradient(166deg, rgba(9,9,9,1) 0%, rgba(43,42,42,1) 100%);;
+  background-color: #414347;
   color: #fff;
   overflow-x: hidden;
 }
