--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,19 +1,19 @@
 .dark:root {
-    --backgroundColor: #414347;
-    --backgroundColorV2: #1e1e1f;
+    --backgroundColor: #1e1e1f;
+    --backgroundColorV2: #414347;
     --textColor: #fff;
     --textColorV2: #EF6567;
 }
 :root {
     --backgroundColor: #F8F7F5;
-    --backgroundColorV2: #8d8d8d;
+    --backgroundColorV2: #cfcfcf;
     --textColor: #000;
     --textColorV2: #EF6567;
 }
 
 
 footer {
-    background-color: var(--backgroundColorV2);
+    background-color: var(--backgroundColor);
     color: var(--textColor);
     width: 100vw;
     height: auto;
@@ -23,6 +23,7 @@ footer {
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     border-top: 1px solid #EF6567;
+    padding-bottom: 20px;
 }
 /* Pages Div */
 .pages { 
@@ -40,9 +41,10 @@ footer {
     cursor: pointer;
     border: none;
     border-top: 3px solid transparent;
-    color: #fff;
+    color: var(--textColor);
     background-color: transparent;
     transition: 0.4s ease-in;
+
 }
 .pages button:hover {
     border-top: 3px solid #EF6567;
@@ -145,7 +147,7 @@ footer {
     padding: 5px;
     border-radius: 5px;
     transition: 0.2s;
-    background-color: var(--backgroundColor);
+    background-color: var(--backgroundColorV2);
     color: var(--textColor);
 }
 .select-lang:hover,
@@ -155,3 +157,65 @@ footer {
 .select-lang-label {
     margin-bottom: 10px;
 }
+
+.theme-div {
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+
+ 
+.input-themes {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .input-themes:after {
+    content: "";
+    clear: both;
+  }
+  
+  .radio {
+    border: 1px solid #EF6567;
+    box-sizing: border-box;
+    float: left;
+    height: 30px;
+    position: relative;
+    width: 65px;
+  }
+  
+  .radio + .radio {
+    margin-left: 25px;
+  }
+  
+  .radio label {
+    background: var(--backgroundColor) no-repeat center center;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    white-space: nowrap;
+  }
+  
+  .radio label span {
+    z-index: 1;
+  }
+  .radio label input[type=radio] {
+    all: unset;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+  .radio label input[type=radio]:checked {
+    background-color: #EF6567;
+
+  }
+  .radio label input[type=radio]:checked + span{
+    color: #fff;
+  }
