--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
   --textColor: #000;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   margin: 0;
@@ -27,6 +30,7 @@ body {
   background-color: var(--backgroundColor);
   color: var(--textColor);
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 body::-webkit-scrollbar {
   width: 5px;            
