--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -219,3 +219,30 @@ footer {
   .radio label input[type=radio]:checked + span{
     color: #fff;
   }
+
+  @media only screen and (max-width: 850px) {
+    footer {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(11, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+    }
+        
+    .pages { grid-area: 1 / 1 / 3 / 6; }
+    .about { 
+        grid-area: 3 / 1 / 5 / 6;; 
+        margin: 0;
+    }
+    
+    .social { 
+        grid-area: 6 / 1 / 9 / 6; 
+    }
+    .social div:nth-child(2) {
+        flex-direction: unset;
+    }
+    .credits { 
+        grid-area: 9 / 1 / 12 / 6; 
+
+    }
+}
